styles/css/charadex.css
/* ... */
.dropdown-menu {
  border-radius: var(--cd-border-radius) !important;
  background-color: var(--cd-faded-background-color) !important;
  color: var(--cd-body-text-color) !important;
}

.dropdown-item {
  color: var(--cd-body-text-color) !important;
}

.dropdown-item:hover,
.dropdown-item:focus,
.dropdown-item:active,
.dropdown-item.selected {
  background-color: var(--cd-primary-color) !important;
  color: var(--cd-primary-text-color) !important;
}

/* ============================================================= */
/* Card
/* ============================================================= */

.card {
  background-color: var(--cd-card-background-color) !important;
  border-width: var(--cd-card-border-width) !important;
  border-style: var(--cd-card-border-style) !important;
  border-color: var(--cd-card-border-color) !important;
  border-radius: var(--cd-border-radius) !important;
}

.card-header {
  background-color: var(--cd-card-header-background-color) !important;
  color: var(--cd-card-header-font-color) !important;
  border-bottom-color: var(--cd-card-border-color) !important;
  border-bottom-width: var(--cd-card-border-width) !important;
  border-bottom-style: var(--cd-card-border-style) !important;
  font-family: var(--cd-card-header-font-family) !important;
  border-radius: calc(var(--cd-border-radius) - 1px)
    calc(var(--cd-border-radius) - 1px) 0 0 !important;
}

.card-footer {
  background-color: var(--cd-card-header-background-color) !important;
  color: var(--cd-card-header-font-color) !important;
  border-top-color: var(--cd-card-border-color) !important;
  border-top-width: var(--cd-card-border-width) !important;
  border-top-style: var(--cd-card-border-style) !important;
  font-family: var(--cd-card-header-font-family) !important;
  border-radius: 0 0 calc(var(--cd-border-radius) - 1px)
    calc(var(--cd-border-radius) - 1px) !important;
}

/* ============================================================= */
/* Text
/* ============================================================= */
.text-justify {
  text-align: justify;
}

/* ============================================================= */
/* Buttons & Badges
/* ============================================================= */

.btn,
.nav-pills .nav-link {
  border-style: var(--cd-button-border-style) !important;
  border-width: var(--cd-button-border-width) !important;
  border-radius: var(--cd-button-border-radius) !important;
}

.btn.btn-primary,
.badge.badge-primary,
.nav-pills .nav-link {
  color: var(--cd-button-text-color) !important;
  background-color: var(--cd-button-background-color) !important;
  border-color: var(--cd-button-border-color) !important;
}

.btn.btn-primary:hover,
.btn.btn-primary:focus,
.btn.btn-primary:active,
a.badge.badge-primary:hover,
a.badge.badge-primary:focus,
a.badge.badge-primary:active,
.nav-pills .nav-link.active:hover,
.nav-pills .nav-link.active:focus,
.nav-pills .nav-link.active:active {
  color: var(--cd-button-text-color-hover) !important;
  border-color: var(--cd-button-border-color-hover) !important;
  background-color: var(--cd-button-background-color-hover) !important;
  box-shadow: none !important;
}

/* ============================================================= */
/* Input
/* ============================================================= */

.form-control {
  background-color: var(--cd-input-background-color) !important;
  color: var(--cd-input-text-color) !important;
  border-width: var(--cd-input-border-width) !important;
  border-style: var(--cd-input-border-style) !important;
  border-color: var(--cd-input-border-color) !important;
  border-radius: var(--cd-input-border-radius) !important;
}

.form-control:focus,
.form-control:active {
  background-color: var(--cd-input-background-color) !important;
  border-color: var(--cd-input-border-color-hover) !important;
}

/* ============================================================= */
/* Scrollbar
/* ============================================================= */

@media (min-width: 992px) {
  body::-webkit-scrollbar-track {
    background-color: var(--cd-faded-background-color);
    border-width: 0px !important;
  }

  body::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }

  body::-webkit-scrollbar-thumb {
    background-color: var(--cd-primary-color);
  }

  body::-webkit-scrollbar-corner,
  body::-webkit-resizer {
    background-color: var(--cd-border-color);
  }
}

/* ============================================================= */
/* Headers
/* ============================================================= */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--cd-navbar-font-family) !important;
  font-weight: bold;
  text-transform: uppercase;
}
h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  text-decoration: none;
}
h1 {
  color: var(--cd-faded-text-color);
  font-size: 1.4rem;
  text-align: center;
}
h2 {
  color: var(--cd-secondary-color);
  font-size: 1.2rem;
}
h3 {
  color: var(--cd-primary-color);
  font-size: 1.1rem;
}
h4 {
  color: var(--cd-faded-text-color);
  font-size: 1.05rem;
}

.subtitle {
  font-family: var(--cd-navbar-font-family) !important;
  font-weight: bold;
  color: var(--cd-faded-text-color);
  font-size: 1.4rem;
  text-align: center;
  margin-bottom: 0.5rem;
}

/* ============================================================= */
/* Horizontal Rule
/* ============================================================= */
hr {
  background-color: var(--cd-faded-text-color);
  -webkit-mask: url("/concordia-order/assets/hr.svg") no-repeat 50% 50%;
  mask: url("/concordia-order/assets/hr.svg") no-repeat 50% 50%;
  -webkit-mask-size: contain;
  mask-size: contain;
  vertical-align: -0.1em;
  content: "";
  height: 1em;
  width: 50%;
  padding: 1rem;
  margin: 0;
  border: 0;
}
.card hr {
  margin-left: auto;
  margin-right: auto;
}
@media (min-width: 768px) {
  hr {
  width: 50%;
  }
}
/* ... */

